--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/enrico1997/LIRI-Bot.git"
   },
-  "author": "Enrico Bernardo",
+  "author": "Enrico J Bernardo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/enrico1997/LIRI-Bot/issues"
